tests/js/invalid/list/mixed-types-1.buri
-- types are mixed
mixed = [1, [1]]